# splatnet-backend

./: .gitignore  LICENSE  MANIFEST.in  README.md  code_of_conduct.md  config.py  database.py  dockerfile  example_dot.env  main.py  pyproject.toml  renovate.json  requirements.txt  spfn-main.py
.forgejo/workflows/: build.yml
judd/: database.js  package-lock.json  package.json  server.js
judd/middleware/: title-code.js  validate-boss-digest.js  validate-multipart.js
judd/models/: equipment.js  equipmentLast.js  playerRank.js  result.js  splatfest_result.js
judd/routes/: blacklist.json  ids.json  index.js  post.js
judd/titles/: splatoon.js
routes/: Ranking.py  boss.py  logout.py  me.py  ranking_grabstats.py  sessionid_check.py  sso.py  twitter_link.py  user.py
routes/equipment/: abilitymain.json  equipment.py  equipment_history.py
services/: abilitymain.json  auth.py  boss_retrieval.py  decrypt.js
