[project]
name = "splatnet-backend"
version = "0.1.0"
description = "Backend for SplatNet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==48.0.0",
    "fastapi==0.136.3",
    "fastapi-cache2==0.2.2",
    "greenlet==3.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.17",
    "oauthlib==3.3.1",
    "oead==1.2.9.post4",
    "pendulum==3.2.0",
    "psycopg2-binary==2.9.12",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "six==1.17.0",
    "sqlalchemy==2.0.50",
    "starlette==1.2.1",
    "tweepy==4.16.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uvicorn==0.48.0",
    "jinja2==3.1.6",
]

[tool.setuptools]
packages = { find = {} }
include-package-data = true

py-modules = ["main", "database", "config"]

[tool.setuptools.package-data]
"*" = [
    ".env", 
    ".env.example", 
    "judd/**/*", 
    "services/**/*.js", 
    "routes/**/*.json",
    "**/*.json"
]

[project.scripts]
splatnet = "main:start"